// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBtn.js should render a <button> tag when using to prop 1`] = `

<button class="v-btn v-btn--router theme--light">
</button>

`;

exports[`VBtn.js should render an <a> tag when using href prop 1`] = `

<a href="http://www.google.com"
   class="v-btn theme--light"
>
  <div class="v-btn__content">
  </div>
</a>

`;

exports[`VBtn.js should render component and match snapshot 1`] = `

<button type="button"
        class="v-btn theme--light"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should render component with color prop and match snapshot 1`] = `

<button type="button"
        class="v-btn theme--light green darken-1"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should render component with color prop and match snapshot 2`] = `

<button type="button"
        class="v-btn v-btn--flat theme--light green--text text--darken-1"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should render component with loader and match snapshot 1`] = `

<button type="button"
        class="v-btn v-btn--loader theme--light"
>
  <div class="v-btn__content">
  </div>
  <span class="v-btn__loading">
    <div role="progressbar"
         aria-valuemin="0"
         aria-valuemax="100"
         class="v-progress-circular v-progress-circular--indeterminate"
         style="height: 23px; width: 23px;"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381"
      >
        <circle fill="transparent"
                cx="43.80952380952381"
                cy="43.80952380952381"
                r="20"
                stroke-width="3.8095238095238093"
                stroke-dasharray="125.664"
                stroke-dashoffset="125.66370614359172px"
                class="v-progress-circular__overlay"
        >
        </circle>
      </svg>
      <div class="v-progress-circular__info">
      </div>
    </div>
  </span>
</button>

`;

exports[`VBtn.js should render component with loader slot and match snapshot 1`] = `

<button type="button"
        class="v-btn v-btn--loader theme--light"
>
  <div class="v-btn__content">
  </div>
  <span class="v-btn__loading">
    <span>
      loader
    </span>
  </span>
</button>

`;

exports[`VBtn.js should render specified tag when using tag prop 1`] = `

<a class="v-btn theme--light">
  <div class="v-btn__content">
  </div>
</a>

`;
